No need to depend on Commons Codec for this test, use JAXB's Base64 conversion API.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1600150 13f79535-47bb-0310-9956-ffa450edef68